# NebulaKernelOS

./: Makefile  meson.build  meson.options
.github/: FUNDING.yml
config/ldscript/: aarch64.ld
config/make/: compile.mk  environment.mk  file.mk  find.mk  flag.mk  folder.mk  pattern.mk  rule.mk  tool.mk
config/meson/environment/: meson.build
config/meson/file/: meson.build
config/meson/find/: meson.build
config/meson/flag/: meson.build
config/meson/folder/: meson.build
config/meson/generator/: meson.build
config/meson/rule/: meson.build
config/meson/tool/: meson.build
include/: limits.h  stddef.h  stdint.h  stdio.h  stdlib.h  time.h
include/Nebula/: nebula.h
include/sys/: types.h
licenses/Nebula-Posix-Headers/: README.md
src/: start.c  start.cpp
src/assembly/aarch64/raspberry/: start.s
src/assembly/x86_64/standar/: start.s
src/mmu/: memory_scaner.c  null_pointer.s
src/sc/: round_robin.c
