project(
	'Nebula Kernel',
	[ 'c', 'cpp' ],
	version: '0.1.0',
	meson_version: '>=1.9.0'
)

# ****************************
# *** Environment Settings ***
# ****************************

subdir('config/meson/environment')

# ***************
# *** Folders ***
# ***************

subdir('config/meson/folder')

# *************
# *** Files ***
# *************

subdir('config/meson/file')
subdir('config/meson/find')

# *************
# *** Tools ***
# *************

subdir('config/meson/tool')
subdir('config/meson/flag')

# *****************
# *** Generator ***
# *****************

subdir('config/meson/generator')

# *************
# *** Rules ***
# *************

subdir('config/meson/rule')
subdir('config/meson/compile')