# *****************
# *** Main File ***
# *****************

SOURCE_FILE_START_C = '../../../src/start.c'
OBJECT_FILE_START_C = 'start.c.o'

# **************************
# *** Linker Script File ***
# **************************

LDSCRIPT = CONFIG_FOLDER + '/' + LDFILE

# ********************
# *** Binary Files ***
# ********************


NEBULA_ELF = 'NebulaOS.elf'
NEBULA_BIN = 'NebulaOS.bin'
NEBULA_IMG = NEBULA_NAME