# **************************************
# *** Source Files for the Scheduler ***
# **************************************

SOURCE_FILES_SC_C  = files(
						SOURCE_FOLDER_SC + '/' + '.gitkeep'
					)

# **************************************************
# *** Source Files for the Memory Managment Unit ***
# **************************************************

SOURCE_FILES_MMU_C = files(
						SOURCE_FOLDER_MMU + '/' + '.gitkeep'
					)

# ********************************************************
# *** Source Files for the Inter-Proceess Communication ***
# ********************************************************

SOURCE_FILES_IPC_C = files(
						SOURCE_FOLDER_IPC + '/' + '.gitkeep'
					)

# ******************************************************
# *** Source Files for the Interrupt Service Routine ***
# *****************************************************

SOURCE_FILES_ISR_C = files(
						SOURCE_FOLDER_ISR + '/' + '.gitkeep'
					)

# ****************************************************
# *** Source Files for the Thread Memory Managment ***
# ****************************************************

SOURCE_FILES_TMM_C = files(
						SOURCE_FOLDER_TMM + '/' + '.gitkeep'
					)