# **********************
# *** Source Folders ***
# **********************

SOURCE_FOLDER_SC  = '../../../src/sc'
SOURCE_FOLDER_MMU = '../../../src/mmu'
SOURCE_FOLDER_IPC = '../../../src/ipc'
SOURCE_FOLDER_ISR = '../../../src/isr'
SOURCE_FOLDER_TMM = '../../../src/tmm'

# *********************
# *** Object Folder ***
# *********************

OBJECT_FOLDER_SC  = '../../../build/obj/sc'
OBJECT_FOLDER_MMU = '../../../build/obj/mmu'
OBJECT_FOLDER_IPC = '../../../build/obj/ipc'
OBJECT_FOLDER_ISR = '../../../build/obj/isr'
OBJECT_FOLDER_TMM = '../../../build/obj/tmm'

# *********************
# *** Binary Folder ***
# *********************

BUILD_FOLDER_BIN = '../../../build/bin' + ARCH
BUILD_FOLDER_IMG = '../../../build/img' + ARCH

# *********************
# *** Config Folder ***
# *********************

CONFIG_FOLDER = '../config/ldscript'